# NALUProcessing

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
docs/: NALUProcessing.pptx
src/: main.cpp
src/App/NaluProcessing/: CMakeLists.txt  nalu_processing_app.cpp
src/App/StreamProcessing/: CMakeLists.txt  stream_processing_app.cpp
src/Lib/: CMakeLists.txt  nalu_processing_lib.cpp  nalu_processing_lib.h
